deploying fixed navbar and other refactorings alongwith removal of excessive horizontal overflow due to long math equation

--- a/styles_responsive.css
+++ b/styles_responsive.css
@@ -2,6 +2,71 @@ body {
     border: 5px solid purple;
 }
 
+
+.block-equation::-webkit-scrollbar-track
+{
+    /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
+	background-color: blueviolet;
+	border-radius: 10px;
+}
+
+.block-equation::-webkit-scrollbar
+{
+	width: 6px;
+	height: 6px;
+}
+
+.block-equation::-webkit-scrollbar-thumb
+{
+	background-color: black;
+    border-radius: 3px;
+	/* background-image: -webkit-gradient(linear,
+									   left bottom,
+									   left top,
+									   color-stop(0.44, rgb(122,153,217)),
+									   color-stop(0.72, rgb(73,125,189)),
+									   color-stop(0.86, rgb(28,58,148))); */
+}
+
+
+/* .code-snippet::-webkit-scrollbar-track
+{
+	background-color: blueviolet;
+	border-radius: 10px;
+    margin-top: 8px;
+    margin-bottom: 10px;
+}
+
+.code-snippet::-webkit-scrollbar
+{
+	width: 6px;
+}
+
+.code-snippet::-webkit-scrollbar-thumb
+{
+	background-color: black;
+    border-radius: 3px;
+} */
+
+
+
+
+/* .block-equation::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  .block-equation::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  .block-equation::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+  
+  .block-equation::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  } */
+
 .page-container {
     display: flex;
     flex-direction: row;
@@ -87,12 +152,13 @@ body {
     display: flex;
     color: #fff;
     max-height: 250px;
-    overflow: auto;
-    padding-left: 50px;
+    padding-left: 25px;
 }
   
 .block-equation {
     flex-grow: 1;
+    overflow: auto;
+    white-space: nowrap;
 }
   
 .copy-clipboard {
@@ -119,19 +185,23 @@ body {
     font-size: medium;
     display: flex;
     margin-top: 20px;
+    max-height: 500px;
+    /* background-color: #551a8b; */
 }
   
 .code-snippet {
-    max-width: 98%;
-    flex: 99%;
+    max-width: calc(100% - 35px);
+    overflow-y: auto;
+    flex-grow: 1;
 }
   
 .copy-code-clipboard {
     display: flex;
     justify-content: center;
+    /* align-items: center; */
     margin-top: 10px;
     margin-left: 0px;
-    background-color: #04AA6D;
+    /* background-color: springgreen; */
 }
   
 .btn-code-clipboard {
@@ -210,6 +280,8 @@ body {
     border: 2px solid blueviolet;
     /* border-left: 2px solid #cdcdcd; */
     /* background-color: antiquewhite; */
+    position: fixed;
+    width: calc(22% - 4px);
 }
   
 .toc-container {
@@ -395,9 +467,79 @@ tr:nth-child(even) {
     font-size: medium;
     font-family: arial, sans-serif;
     color: black;
+    display: contents;
 }
 
+.hyperlink-container {
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    width: fit-content;
+}
 
+.hyperlink-container:hover {
+    /* border: 2px solid seagreen; */
+}
+
+.hyperlink {
+    font-size: larger;
+    text-decoration: none;
+    color: seagreen;
+    transition: .3s;
+    display: inline-block;
+    padding-left: 20px;
+    padding-right: 25px;
+    -webkit-transition: -webkit-transform 0.2s;
+    transition: transform 0.2s;
+    font-family: 'Barlow Semi Condensed', sans-serif;
+    font-weight: 400;
+    font-style: italic;
+}
+  
+.hyperlink:hover {
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+    font-weight: normal;
+}
+  
+.hyperlink::before {
+    position: absolute;
+    top: -2px;
+    left: -7px;
+    box-sizing: content-box;
+    padding: 0 5px;
+    width: 100%;
+    height: 100%;
+    border: 2px solid seagreen;
+    /* content: ''; */
+    opacity: 0;
+    -webkit-transition: opacity 0.2s, -webkit-transform 0.2s;
+    transition: opacity 0.2s, transform 0.2s;
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+}
+  
+.hyperlink:hover::before{
+    opacity: 1;
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+}
+
+.tweet-block {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    background-color: mediumslateblue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+blockquote .twitter-tweet {
+    display: inline-block;
+    font-size: 100px;
+}
 
 @media (max-width: 768px){
 
@@ -414,17 +556,40 @@ tr:nth-child(even) {
         font-size: small;
     }
 
+    .block-equation::-webkit-scrollbar {
+	    width: 3px;
+	    height: 3px;
+    }
+
     .table-of-contents-container {
         display: none;
     }
 
     .video-player {
-        height: 300px;
+        height: 250px;
         width: 99%;
     }
 
     .audio-player {
-        width: 80%;
+        width: 95%;
     }
+
+    .table-block {
+        max-height: 300px;
+    }
+
+    .file-container {
+        width: 65%;
+    }
+
+    .file-link {
+        font-size: small;
+    }
+
+    .code-block {
+        font-size: small;
+        max-height: 300px;
+    }
+    
 
 }
